@@ -111,7 +111,8 @@ extern "C" {
 #define	CRYPTO_LOCK_GETSERVBYNAME	21
 #define	CRYPTO_LOCK_READDIR		22
 #define	CRYPTO_LOCK_RSA_BLINDING	23
-#define	CRYPTO_NUM_LOCKS		24
+#define	CRYPTO_LOCK_DH			24
+#define	CRYPTO_NUM_LOCKS		25
 
 #define CRYPTO_LOCK		1
 #define CRYPTO_UNLOCK		2
